first major deploy of new site. making sure everything is working from contentful, & testing form functionality.

--- a/src/components/sclogo/sclogo.scss
+++ b/src/components/sclogo/sclogo.scss
@@ -1,12 +1,13 @@
 
 .logoArea {
- padding-top: 100px;
+ padding-top: 40px;
+ padding-bottom: 70px;
  text-align: center;
 
 .scLogoSVG {
 
- height: 15vw;
-  width: 15vw;
+ height: 40px;
+ width: 40px;
 
 }
 
