--- a/src/fonts&colors.scss
+++ b/src/fonts&colors.scss
@@ -5,7 +5,9 @@ $BoldFont: futura-pt-bold, sans-serif;
 $CondensedFont: futura-pt-condensed, sans-serif;
 
 $AccentColor: #add9f4;
-$BackgroundColor: white;
+$BackgroundColor: #e6e6e6;
+$ContainerColor: #cecece;
+$ContainerBoxShadowColor: #f2f2f2;
 $DefaultTextColor: #000000;
 
 $Regular: 400;
