--- a/src/components/nav/navstyles.scss
+++ b/src/components/nav/navstyles.scss
@@ -1,4 +1,108 @@
 @import "../../fonts&colors";
+/* BIG NAV STYLES */
+
+.bigNavigation {
+
+  background-color: $BackgroundColor;
+
+  h1 {
+    color: $DefaultTextColor;
+    display: block;
+    font-size: 6vw;
+    font-family: $MainFont;
+    font-weight: 800;
+    font-style: italic;
+    padding: 30px;
+    text-decoration: none;
+    text-align: center;
+
+  }
+
+}
+
+.indexLinkWrapper {
+  background-color: #add9f4;
+
+}
+
+.bigLink {
+  -webkit-transition: text-shadow 0.2s linear;
+  -moz-transition: text-shadow 0.2s linear;
+  -ms-transition: text-shadow 0.2s linear;
+  -o-transition: text-shadow 0.2s linear;
+  transition: text-shadow 0.2s linear;
+
+}
+
+h1:hover {
+  text-decoration: none;
+}
+
+.bigLink:hover {
+  text-decoration: none;
+  text-shadow: 15px 15px $AccentColor;
+
+
+}
+
+.link:hover {
+  background-color: $AccentColor;
+  text-decoration: none;
+}
+
+
+.navContainer {
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  z-index: 2;
+  background-color: white;
+  border-bottom: 0.5px solid black;
+
+}
+
+/* Position and sizing of burger button */
+.burgerButton {
+  position: fixed;
+  width: 36px;
+  right: 25px;
+  height: 30px;
+  left: initial;
+  top: 15px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: black;
+}
+
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+.menuOverlay {
+  top: 60px;
+  background-color: white;
+
+}
+
+.bm-menu-wrap {
+  top: 60px;
+}
+
+.theMenu {
+  background: white;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
 
 
 .NavLogo {
@@ -6,21 +110,44 @@
   width: 40px;
   height: 40px;
 
+
 }
 
-.NavLinks {
+.navContainer {
+
+  padding: 10px;
+
+}
+
+#navList {
+  height: 0;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 2;
+  transition: height 0.4s linear;;
+
+
+}
+
+.navLinks {
+  position: relative;
+  width: 100%;
 
 
   h1 {
-
+    color: $DefaultTextColor;
+    display: block;
+    font-size: 7vw;
     font-family: $MainFont;
-    font-size: 30px;
-    padding: 10px;
+    font-weight: 800;
+    font-style: italic;
+    padding: 30px;
     text-decoration: none;
-    color: black;
-    margin: 0;
+    text-align: center;
 
   }
+
 
   a {
     margin: 0;
@@ -29,14 +156,25 @@
 
 }
 
-.navbar {
-  padding: 0 10px 0 10px;
+.closeIcon, .menuIcon {
+
+  position: absolute;
+  font-size: 40px;
+  right: 20px;
 }
 
+
+/*.navbar {
+  padding: 0 10px 0 10px;
+  background-color: grey;
+z-index: 0;
+}
+*/
 .linkActive {
 
  background-color: $AccentColor;
 }
+
 
 #music {
 }
