updating styles, navigation usability and adding message to music page.

--- a/src/components/nav/navstyles.scss
+++ b/src/components/nav/navstyles.scss
@@ -69,11 +69,17 @@ h1:hover {
   height: 30px;
   left: initial;
   top: 15px;
+
 }
 
+.burgerButton:hover {
+
+  background-color: $AccentColor;
+}
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
   background: black;
+  height: 10%;
 }
 
 
