updating page styles.

--- a/src/pages/page_styles/development_design.scss
+++ b/src/pages/page_styles/development_design.scss
@@ -96,3 +96,22 @@
   }
 
 }
+
+.resumeContainer {
+  background-color: $ContainerColor;
+
+
+}
+
+.resumeSVG {
+  text-align: center;
+
+  img {
+    font-family: $MainFont;
+    height: 100px;
+    width: 100px;
+  }
+
+
+}
+
