--- a/src/pages/page_styles/universal_page_styles.scss
+++ b/src/pages/page_styles/universal_page_styles.scss
@@ -16,11 +16,6 @@ a:hover {
 
 }
 
-.titleAndQuote {
-
-
-}
-
 .sectionTitle {
   font-family: $BoldFont;
   font-style: italic;
@@ -97,7 +92,7 @@ a:hover {
   .pageHeaderText {
     font-family: $CondensedFont;
     font-weight: $Heavy;
-    font-size: 10vw;
+    font-size: 30px;
     padding-top: 40px;
 
   }
