changing GraphQL query names. added different styles as well.

--- a/src/pages/page_styles/universal_page_styles.scss
+++ b/src/pages/page_styles/universal_page_styles.scss
@@ -89,6 +89,10 @@ a:hover {
 
   }
 
+  .pageGIF {
+    padding: 20px;
+  }
+
   .pageHeaderText {
     font-family: $CondensedFont;
     font-weight: $Heavy;
