--- a/src/components/nav/navstyles.scss
+++ b/src/components/nav/navstyles.scss
@@ -68,6 +68,8 @@ h1:hover {
 
 .navContainer {
   position: fixed;
+  padding: 10px;
+  margin: 0;
   width: 100%;
   height: 60px;
   z-index: 2;
@@ -141,11 +143,6 @@ h1:hover {
 
 }
 
-.navContainer {
-
-  padding: 10px;
-
-}
 
 #navList {
   height: 0;
