trying to add styles to carousel controls.

--- a/src/pages/page_styles/music.scss
+++ b/src/pages/page_styles/music.scss
@@ -43,14 +43,14 @@
 }
 
 .carousel-control-next {
-  right: -3vw;
-  width: 5%;
+  right: -3vw !important;
+  width: 5% !important;
 
 }
 
 .carousel-control-prev {
-  left: -3vw;
-  width: 5%;
+  left: -3vw !important;
+  width: 5% !important;
 
 }
 
