--- a/src/pages/page_styles/development_design.scss
+++ b/src/pages/page_styles/development_design.scss
@@ -76,6 +76,13 @@
 
 @media (max-width: 768px) {
 
+  .projectDescriptionContainer {
+
+    padding-left: 0;
+    padding-right: 0;
+
+  }
+
   .projectDescription {
 
     font-family: $MainFont;
